# Fingerprint

./: .gitignore  Fingerprint GAN.ipynb  Fingerprint Siamese Neural Network 2.ipynb  Fingerprint Siamese Neural Network.ipynb  Fingerprint Siamese Neural Network_20230215.html  README.md  enas_cifar-10_pytorch.ipynb  setup.sh
Experiments/: Fingerprint Siamese Neural Network 2 20230308.ipynb  Fingerprint Siamese Neural Network 20230227.html  Fingerprint Siamese Neural Network 20230227.ipynb  Fingerprint Siamese Neural Network_20230215.html  Fingerprint Siamese Neural Network_20230215.ipynb
Graph/: cat_code.sh  install.sh  main.py  renderGraph.py  sampleArchitectureHuman.py  utils.py
Graph/classes/: ENAS.py  Graph.py  Nodes.py  SharedConv2D.py  SharedConv2d.py  SharedLayersManager.py  SharedLinear.py
Graph/graph-builder-app/: package-lock.json  package.json
Graph/setup/: install.sh  install_cuda_ubuntu_22.04_x86_64_deb_local.sh
Graph/testing/: arch_code_reader.py  graphTests.py  listGPUs.py  nodeTests.py  runTests.py  runTests.sh
Graph/testing/FunctionalTests/python_mojo_interop/: Arch_Encoder.py  arch_code_reader.py  arch_coder_m.mojo  build_graph.py  cuda_debug.py  generate_population.mojo  genetic_algo_no_param_sharing.py  graph_dna.txt  main.py  mojo_module.mojo  offspring_dna.txt  pop_dna.txt  pyproject.toml
Graph_mojo/: mojoproject.toml  run_tests.sh  utils.py
Graph_mojo/classes/: Nodes.mojo
Graph_mojo/setup/: install.sh  start_magic.sh
checkpoint/: Fingerprint Siamese Neural Network 2 20230308.html
utilities/: reformatSynFingerprintDataset.py
(+100 files in other folders)
