[project]
authors = [{name = "Dennis", email = "denkovarik123@gmail.com"}]
dependencies = []
name = "python_mojo_interop"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["https://conda.modular.com/max-nightly", "https://conda.modular.com/max", "https://repo.prefix.dev/modular-community", "conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
python_mojo_interop = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
max = ">=25.5.0.dev2025061705,<26"
torchvision = ">=0.22.0,<0.23"
graphviz = ">=13.0.1,<14"
tqdm = ">=4.67.1,<5"
pytorch = ">=2.7.0,<3"
